Tweak bridge and pier city maps
widen both, add more side cover/etc.

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -399,7 +399,7 @@
 
 ; Also cool, but narrow, Pier + Bridge:
  +arrPlots=(MapName="plot_CTY_MdObj_Pier_EMM_01", strType="CityCenter", FloorCount=3, \\
-	ObjectiveTags[0]="CityCenter",  ObjectiveTags[1]="Council", ObjectiveTags[2]="Vehicle")
+	ObjectiveTags[0]="CityCenter",  ObjectiveTags[1]="Council", ObjectiveTags[2]="Vehicle", cursorflooroffset=-64)
 
  +arrPlots=(MapName="plot_CTY_MdObj_Bridge_EMM_01", strType="CityCenter", FloorCount=3, \\
 	ObjectiveTags[0]="CityCenter", ObjectiveTags[1]="SabotageCC")
