Update range penalty negation effect
1. Deprecate `X2Effect_CancelLongRangePenalty`.
2, Switch to `X2Effect_ModifyRangePenalties`.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1467,10 +1467,21 @@ CONCUSSION_WARHEADS_ENV_DMG_BONUS=7
 
 DFA_USES_PER_TURN = 1
 
+; Range penalty negation for DFA
+; 0.8 = 80% penalty negation
+DFA_RANGE_PENALTY_NEGATION_MODIFIER = 0.5
+
+; Attacks against targets at this range and farther
+; will be considered as "long range"
+DFA_RANGE_PENALTY_NEGATION_BASE_RANGE = 17
+
+; List of abilities that never activate DFA
 +DFA_BLACKLISTED_ABILITIES = "DoubleTap2"
 
 [LW_Overhaul.X2Effect_CancelLongRangePenalty]
-NULLIFY_LONG_RANGE_PENALTY_MODIFIER=0.5		; Set to below 1 to reduce the impact of DFA on the long-range shot penalty. At 1, the entire penalty is nullified. At .5 it reduced by half.
+
+; DEPRECATED
+NULLIFY_LONG_RANGE_PENALTY_MODIFIER=0.5
 
 [LW_Overhaul.X2Ability_LW_ChosenAbilities]
 COOLDOWN_AMMO_DUMP=1
