Fix cavalry after win to actually use turns since win
Also fix the config that didn't actually work.

If CheckWin was set, it would check those, but then it would fall back to using the standard triggers for the turns since win check too.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2031,6 +2031,9 @@ AMBUSH_MISSION_REGION_ALERT_LEVEL=2
 ; CavalryAbsoluteTurn = What turn after the trigger to start dropping cavalry reinforcements (one reinf per turn). Default 28, modified by diff
 ; CavalryWinTurn = What turn after all strategic objectives are met to start dropping one reinf per turn. Default 12, modified by diff
 
+DEFAULT_CAVALRY_ABSOLUTE_TURNS = 28
+DEFAULT_CAVALRY_WIN_TURNS = 12
+
 +MISSION_REINFORCEMENT_MODIFIERS=(ActivityName=Snare,				BucketMultiplier=3.0, ReinforcementsTrigger=eReinforcementsTrigger_Reveal)
 
 +MISSION_REINFORCEMENT_MODIFIERS=(MissionType=Hack_LW,				BucketMultiplier=1.0, AccelerateMultiplier=0.75, QueueOffset=1, ReinforcementsTrigger=eReinforcementsTrigger_RedAlert)
