Update CHL run order for LW_Toolbox

--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -176,6 +176,9 @@ RunPriorityGroup=RUN_LAST
 RunPriorityGroup=RUN_LAST
 +RunAfter=ModJamLWOTC_M2
 
+[LW_Toolbox_Integrated CHDLCRunOrder]
+RunPriorityGroup=RUN_FIRST
+
 ; Reliable Ever Vigilant QOL changes.
 
 [WOTC_ReliableEverVigilant.X2Ability_EverVigilant]
