add a slight modifier for FL2 on commander/leg
relatively minor, just a small anti-RNG thing for end of march. Chosen aren't active yet anyways

Also config for the debug logging

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -87,7 +87,7 @@ PER_FACELESS_TERROR_DETECTION_MODIFIER=0.75
 
 +FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[0]=3
 +FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[1]=3
-+FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[2]=0
++FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[2]=2
 +FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[3]=0
 +FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[4]=0
 +FORCE_LEVEL_DETECTION_MODIFIER_COMMANDER[5]=0
@@ -109,7 +109,7 @@ PER_FACELESS_TERROR_DETECTION_MODIFIER=0.75
 
 +FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[0]=2
 +FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[1]=2
-+FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[2]=0
++FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[2]=1
 +FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[3]=0
 +FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[4]=0
 +FORCE_LEVEL_DETECTION_MODIFIER_LEGENDARY[5]=0
@@ -140,6 +140,9 @@ EARLY_DETECTION_CHANCE_BOOST=6
 
 ; % that gets exponentialed by # of times the activity is detected formula is DetectionChance * (MULTI_DETECT_MODIFIER ^ NumTimesDetected)
 MULTI_DETECT_MODIFIER = 1.15
+
+; debug logging for detection stuff; change this to true for logspam
+bDebugLog = false
 
 [LW_Overhaul.X2LWActivityCooldown_UFO]
 ; How many DAYS between UFOs that level-up aliens worldwide.
