--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -94,6 +94,9 @@ bDisableYellRedAlert = true
 +GrenadesRequiringUnitsOnTargetedTiles=DenseSmokeGrenade
 +GrenadesRequiringUnitsOnTargetedTiles=DenseSmokeGrenadeMk2
 
+; Show the Overwatch "eye" icon under the unit flag if the soldier has at least one of these reserve action points
++ValidReserveAPForUnitFlag = "Gunslinger_LW"
+
 [BetterSecondWaveSupport.X2DownloadableContentInfo_BetterSecondWaveSupport]
 +AddSecondWave=(ID="DisableTutorial", DifficultyValue=0)
 +AddSecondWave=(ID="DisableChosen", DifficultyValue=0)
