Expand the objective mod system to include parcels
Also expanded to allow removing objectives.

First use case is to remove the protect device missions from the DLC "crashed UFO" map that spawns the device out in the open and the XCOM squad extra far away

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -782,6 +782,9 @@ ShouldCleanupObsoleteUnits=true
 +PlotObjectiveMods=(MapName="Plot_WLD_SupplyExtract_Train_01", ObjectiveTags[0]="BigSupplyExtraction")
 +PlotObjectiveMods=(MapName="Plot_WLD_SupplyExtract_Convoy_01", ObjectiveTags[0]="BigSupplyExtraction")
 
+; This can now be used to adjust parcels too:
+
++ParcelObjectiveMods=(MapName="Lg_CrashedUFO_02", ObjectiveTags[0]="ProtectDevice", bRemove=true)
 
 ;; Parcels to remove from the game.
 
