Add misc changes
1. Remove old commented out code as it causes the build to fail.
2. Add localization tags for `SUPPRESSION_LW_AIM_MALUS` and `SUPPRESSION_LW_AIM_MALUS_DURATION`.
3. Replace visualization for Suppression with a custom one to modify the flyover colors.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -529,15 +529,16 @@ AREA_SUPPRESSION_AMMO_COST=3
 AREA_SUPPRESSION_MAX_SHOTS=8
 AREA_SUPPRESSION_SHOT_AMMO_COST=1
 AREA_SUPPRESSION_RADIUS=6.01
+DANGER_ZONE_BONUS_RADIUS=1.51
 SUPPRESSION_LW_SHOT_AIM_BONUS=0
 SUPPRESSION_LW_AIM_MALUS = -15
 SUPPRESSION_LW_AIM_MALUS_DURATION = 2
 AREA_SUPPRESSION_LW_SHOT_AIM_BONUS=0
 +SUPPRESSION_LW_INVALID_WEAPON_CATEGORIES="sniper_rifle"
 +SUPPRESSION_LW_INVALID_WEAPON_CATEGORIES="shotgun"
+; List of abilities that benefit from Lockdown and Mayhem
 +SUPPRESSION_SHOT_ABILITIES = "SuppressionShot_LW"
 +SUPPRESSION_SHOT_ABILITIES = "AreaSuppressionShot_LW"
-DANGER_ZONE_BONUS_RADIUS=1.51
 INTERFERENCE_CV_CHARGES=3
 INTERFERENCE_MG_CHARGES=5
 INTERFERENCE_BM_CHARGES=7
