Add bomb plant matinee

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -156,6 +156,7 @@ bTacticalLootCleanup = false
 	MapNames[2]="UMS_MissionCore", \\
 	MapNames[3]="CIN_XP_ChosenADArtillery", \\
 	MapNames[4]="UMS_LWCommon", \\
+	MapNames[5]="CIN_XP_SoldierPlantBomb", \\
 	RequiredPlotObjectiveTags[0]="ChosenAvengerDef", \\
 	RequiredParcelObjectiveTags[0]="ChosenAvengerDefense", \\
 	MissionObjectives[0]=(ObjectiveName="Defense", \\
