Split config for Center Mass and Magnum
will be useful for the future :)

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -835,6 +835,7 @@ CRUSADER_WOUND_HP_REDUCTTION = 6
 
 QUICKDRAW_MOBILITY_INCREASE = 1.0f
 
+; right now, used for Center mass:
 +PISTOL_WEAPON_CATEGORIES=pistol
 +PISTOL_WEAPON_CATEGORIES=sidearm
 
@@ -1760,3 +1761,13 @@ GREATER_PADDING_BM=4
 +PhosphorusShredAbilities=RDChemthrower_DirectJet_F
 +PhosphorusShredAbilities=RDChemthrower_LargeWall_F
 +PhosphorusShredAbilities=RDChemthrower_ArcCutter_F
+
+[LW_PerkPack_Integrated.X2Effect_PrimaryHitBonusDamage]
++CENTER_MASS_PISTOL_CATEGORIES=pistol
++CENTER_MASS_PISTOL_CATEGORIES=sidearm
+
++CENTER_MASS_PISTOL_CATEGORIES=BU_FrostDroid_pistol
++CENTER_MASS_PISTOL_CATEGORIES=iri_handcannon
++CENTER_MASS_PISTOL_CATEGORIES=kpp_autopulser
++CENTER_MASS_PISTOL_CATEGORIES=fbchoswep6
++CENTER_MASS_PISTOL_CATEGORIES=psionic_secondary
