--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -340,6 +340,14 @@ GREATER_FACELESS_MOBILITY_BONUS=2
 GREATER_FACELESS_OFFENSE_BONUS=5
 GREATER_FACELESS_DEFENSE_BONUS=5
 
+; Prevents Julian's MECs from receiving ADVENT upgrades.
++NON_ADVENT_CHARACTER_GROUPS=FeralMEC
+; Unfortunately, Julian's Sectopod and Derelict Turrets use the Sectopod and AdventTurret
+; chargroups, respectively, so we need to match by template name instead.
++NON_ADVENT_TEMPLATE_NAMES=Sectopod_Markov
++NON_ADVENT_TEMPLATE_NAMES=LostTowersTurretM1
+
+
 [LW_PerkPack_Integrated.X2Ability_PerkPackAbilitySet2]
 NUM_AIRDROP_CHARGES=2
 SAVIOR_BONUS_HEAL=4
