Added the Neonate Viper to the default exclusions, on the same grounds as Julian's stuff.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -340,10 +340,12 @@ GREATER_FACELESS_MOBILITY_BONUS=2
 GREATER_FACELESS_OFFENSE_BONUS=5
 GREATER_FACELESS_DEFENSE_BONUS=5
 
-; Prevents Julian's MECs from receiving ADVENT upgrades.
+; Prevents Julian's MECs and Neonate Vipers from receiving ADVENT upgrades.
 +NON_ADVENT_CHARACTER_GROUPS=FeralMEC
++NON_ADVENT_CHARACTER_GROUPS=ViperNeonate
 ; Unfortunately, Julian's Sectopod and Derelict Turrets use the Sectopod and AdventTurret
 ; chargroups, respectively, so we need to match by template name instead.
+; The same problem applies to the Neonate Vipers... I think?
 +NON_ADVENT_TEMPLATE_NAMES=Sectopod_Markov
 +NON_ADVENT_TEMPLATE_NAMES=LostTowersTurretM1
 
