--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -818,6 +818,10 @@ ShouldCleanupObsoleteUnits=true
 +PCPsToRemove="ABN_Blvd_Str_16x08_02"
 +PCPsToRemove="ABN_Blvd_Str_16x16_04"
 
+; These have bad map pieces blocking pathing
++PCPsToRemove="SLM_Wash_xStreet_16x08_01"
++PCPsToRemove="SLM_Wash_xStreet_16x08_02"
+
 [LW_Overhaul.XComGameState_LWListenerManager]
 DEFAULT_LISTENER_PRIORITY=90
 
