--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -446,3 +446,15 @@
 +arrAllPCPDefs=(MapName="CTY_Blvd_F_Str_16x16", \\
 	strPCPType="Boulevard", strTurnType="Straight", iWidth=16, iLength=16, \\
 	arrPlotTypes[0]="CityCenter")
+
+; Remove bugged pathing PCPs from slums:
+
+-arrAllPCPDefs=(MapName="SLM_Wash_xStreet_16x08_01", arrPlotTypes[0]="Slums", \\
+	strPCPType="Wash", strTurnType="xStreet", iWidth=16, iLength=8)
+-arrAllPCPDefs=(MapName="SLM_Wash_xStreet_16x08_02", arrPlotTypes[0]="Slums", \\
+	strPCPType="Wash", strTurnType="xStreet", iWidth=16, iLength=8)
+
++arrAllPCPDefs=(MapName="SLM_Wash_xStreet_16x08_01_fixed", arrPlotTypes[0]="Slums", \\
+	strPCPType="Wash", strTurnType="xStreet", iWidth=16, iLength=8)
++arrAllPCPDefs=(MapName="SLM_Wash_xStreet_16x08_02_fixed", arrPlotTypes[0]="Slums", \\
+	strPCPType="Wash", strTurnType="xStreet", iWidth=16, iLength=8)
