--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -23,7 +23,9 @@
 ; for invasion missions
 
 +arrAllParcelDefinitions=(MapName="lg_Shopping_Center_01_LW_PD",eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Retail", arrZoneTypes[1]="Announce_ShoppingCenter", eFacing=EParcelFacingType_N, ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
++arrAllParcelDefinitions=(MapName="lg_VehicleDealership_01_LW_PD",eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Retail", ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
 +arrAllParcelDefinitions=(MapName="lg_Museum_01_LW_PD",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", eFacing=EParcelFacingType_N, ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
++arrAllParcelDefinitions=(MapName="lg_MunicipalBuilding_01_PD",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", eFacing=EParcelFacingType_S, ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
 +arrAllParcelDefinitions=(MapName="md_GasStation_01_LW_PD",		eSize=eParcelSizeType_Medium,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Retail", bHasEntranceN1=true, bHasEntranceN2=true, bHasEntranceS1=true, bHasEntranceS2=true, bForceEntranceCount=2, ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
 +arrAllParcelDefinitions=(MapName="md_Restaurant_01_LW_PD",		eSize=eParcelSizeType_Medium,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Retail", eFacing=EParcelFacingType_N, ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
 +arrAllParcelDefinitions=(MapName="md_ClothingStore_01_LW_PD",	eSize=eParcelSizeType_Medium,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Retail", eFacing=EParcelFacingType_N, ObjectiveTags[0]="Invasion_LW", bAllowNonObjectiveOverride=false)
@@ -268,7 +270,8 @@
 
 ; Reshi parcel
 
-+arrAllParcelDefinitions=(MapName="ReshiParcel_CityParking_LAR",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", eFacing=EParcelFacingType_N, bAllowNonObjectiveOverride=true)
++arrAllParcelDefinitions=(MapName="ReshiParcel_CityParking_LAR",         eSize=eParcelSizeType_Large,	arrPlotTypes[0]=(strPlotType="CityCenter"), \\
+    arrZoneTypes[0]="Civic", arrZoneTypes[1]="Retail", eFacing=EParcelFacingType_N, bAllowNonObjectiveOverride=true, bHasEntranceE1=true, bHasEntranceE2=true, bHasEntranceW1=true, bHasEntranceW2=true)
 
 ; fixed TLP parcel:
 
