A pile of map fixes
* Fixes bugged pathing on some Slums bridge pieces
* Should finally fix crates spawning inside building on the abandoned city crate race map (you know the one)
* Windows inside the passenger trains for all base game maps now count as low cover and not high cover, so they actually work. If a train still has high cover on those red windows, they are modded and are not safe to take cover at.
* Fixes UFOs having some random valid spawnpoints inside of the roof beams.

--- a/LongWarOfTheChosen/Config/XComMaps.ini
+++ b/LongWarOfTheChosen/Config/XComMaps.ini
@@ -108,3 +108,15 @@
 +arrMapImageDefs=(MapName="md_InterrogationCompound_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_MD_InterrogationCompound_02_Xenoform", Biome="Xenoform")
 
 +arrMapImageDefs=(MapName="sm_Megablock_Middle_Diner_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_ABD_SM_Megablock_Middle_Diner", Biome="")
++arrMapImageDefs=(MapName="sm_Megablock_Middle_Alley_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_ABD_SM_Megablock_Middle_Alley", Biome="")
++arrMapImageDefs=(MapName="sm_Megablock_Middle_Boutique_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_ABD_SM_Megablock_Middle_Boutique", Biome="")
+
++arrMapImageDefs=(MapName="TWN_Train_Passenger_16x64_01_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SMT_Train_Passenger_16x64_01_Arid", Biome="Arid")
++arrMapImageDefs=(MapName="TWN_Train_Passenger_16x64_01_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SMT_Train_Passenger_16x64_01_Temp", Biome="Temperate")
++arrMapImageDefs=(MapName="TWN_Train_Passenger_16x64_01_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SMT_Train_Passenger_16x64_01_Tundra", Biome="Tundra")
++arrMapImageDefs=(MapName="TWN_Train_Passenger_16x64_02_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SMT_Train_Passenger_16x64_02_Arid", Biome="Arid")
++arrMapImageDefs=(MapName="TWN_Train_Passenger_16x64_02_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SMT_Train_Passenger_16x64_02_Temp", Biome="Temperate")
++arrMapImageDefs=(MapName="TWN_Train_Passenger_16x64_02_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SMT_Train_Passenger_16x64_02_Tundra", Biome="Tundra")
+
++arrMapImageDefs=(MapName="SLM_Train_Passenger_16x64_01_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SLM_Train_Passenger_16x64_01", Biome="")
++arrMapImageDefs=(MapName="SLM_Train_Passenger_16x64_02_LW",		ImagePath="UILibrary_MissionImages.Missions_PCP_SLM_Train_Passenger_16x64_02", Biome="")
