--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -458,3 +458,19 @@
 	strPCPType="Wash", strTurnType="xStreet", iWidth=16, iLength=8)
 +arrAllPCPDefs=(MapName="SLM_Wash_xStreet_16x08_02_fixed", arrPlotTypes[0]="Slums", \\
 	strPCPType="Wash", strTurnType="xStreet", iWidth=16, iLength=8)
+
+; fixed Train PCPs so the windows work as cover
+
++arrAllPCPDefs=(MapName="TWN_Train_Passenger_16x64_01_LW",  arrPlotTypes[0]="SmallTown", \\
+	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
+	ObjectiveTags[0]="Hack_Train")
++arrAllPCPDefs=(MapName="TWN_Train_Passenger_16x64_02_LW",  arrPlotTypes[0]="SmallTown", \\
+	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
+	ObjectiveTags[0]="Hack_Train")
+
++arrAllPCPDefs=(MapName="SLM_Train_Passenger_16x64_01_LW",  arrPlotTypes[0]="Slums", \\
+	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
+	ObjectiveTags[0]="Hack_Train")
++arrAllPCPDefs=(MapName="SLM_Train_Passenger_16x64_02_LW",  arrPlotTypes[0]="Slums", \\
+	strPCPType="AdventTrain", strTurnType="GuerillaOps", iWidth=16, iLength=64, \\
+	ObjectiveTags[0]="Hack_Train")
