--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -803,6 +803,9 @@ ShouldCleanupObsoleteUnits=true
 
 ; spawns crates indoors:
 +ParcelsToRemove="sm_Megablock_Middle_Diner"
++ParcelsToRemove="sm_Megablock_Middle_Boutique"
++ParcelsToRemove="sm_Megablock_Middle_Alley"
+
 
 ; missing objectives -> unwinnable missions
 +ParcelsToRemove="md_HWY_Mgee_adventroadblock02"
@@ -821,6 +824,11 @@ ShouldCleanupObsoleteUnits=true
 ; These have bad map pieces blocking pathing
 +PCPsToRemove="SLM_Wash_xStreet_16x08_01"
 +PCPsToRemove="SLM_Wash_xStreet_16x08_02"
+
++ParcelsToRemove="TWN_Train_Passenger_16x64_01"
++ParcelsToRemove="TWN_Train_Passenger_16x64_02"
++ParcelsToRemove="SLM_Train_Passenger_16x64_01"
++ParcelsToRemove="SLM_Train_Passenger_16x64_02"
 
 [LW_Overhaul.XComGameState_LWListenerManager]
 DEFAULT_LISTENER_PRIORITY=90
