more train parcel tweaks
Fix config copypaste typo.
Attempt to adjust some bad LOS.  It's not perfect, but gets some of the spots

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -825,10 +825,10 @@ ShouldCleanupObsoleteUnits=true
 +PCPsToRemove="SLM_Wash_xStreet_16x08_01"
 +PCPsToRemove="SLM_Wash_xStreet_16x08_02"
 
-+ParcelsToRemove="TWN_Train_Passenger_16x64_01"
-+ParcelsToRemove="TWN_Train_Passenger_16x64_02"
-+ParcelsToRemove="SLM_Train_Passenger_16x64_01"
-+ParcelsToRemove="SLM_Train_Passenger_16x64_02"
++PCPsToRemove="TWN_Train_Passenger_16x64_01"
++PCPsToRemove="TWN_Train_Passenger_16x64_02"
++PCPsToRemove="SLM_Train_Passenger_16x64_01"
++PCPsToRemove="SLM_Train_Passenger_16x64_02"
 
 [LW_Overhaul.XComGameState_LWListenerManager]
 DEFAULT_LISTENER_PRIORITY=90
