Add CanalAve to slightly large maps
give +2 turns on the timer for it since it's a long run.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -356,6 +356,7 @@ MAX_REBELS_FOR_RENDEZVOUS=5
 +SlightlyLargeMaps=Plot_TWN_GOps_Waterfront_02
 +SlightlyLargeMaps=plot_TWN_MdObj_Suburb_EMM_01
 +SlightlyLargeMaps=plot_TWN_LgObj_WarehouseParking_EMM_01
++SlightlyLargeMaps=plot_SLM_MdObj_CanalAve_EMM_01
 
 ; +LargeMaps=MapName
 +LargeMaps=Plot_CTY_Council_MdObj_Plaza
