--- a/LongWarOfTheChosen/Config/XComLW_FactionBalance.ini
+++ b/LongWarOfTheChosen/Config/XComLW_FactionBalance.ini
@@ -126,16 +126,24 @@ THEBANISHER_DEATH_DEALER_CRIT = 15
 SHADOW_FLAT_MOB_BONUS = 3
 
 [LW_FactionBalance.X2LWModTemplate_SkirmisherAbilities]
+
 WRATH_COOLDOWN=3
 JUSTICE_COOLDOWN=3
 JUSTICE_IENVIRONMENT_DAMAGE=3
+
 WHIPLASH_COOLDOWN=4
 WHIPLASH_ACTION_POINT_COST=1
+
 FULL_THROTTLE_DURATION=2
+
 BATTLELORD_ACTION_POINT_COST=1
 BATTLELORD_COOLDOWN=5
+
 COMBAT_PRESENCE_COOLDOWN = 5
+
+REFLEX_ALLOW_AS_MULTI_TARGET = false
 REFLEX_CRIT_DEF = 15
+
 TOTAL_COMBAT_BONUS_RANGE = 2
 TOTAL_COMBAT_MOBILITY = 1
 TOTAL_COMBAT_AIM = 5
