Add sitrep indicator for the EMM water maps
also tweak a few other map pieces to fix bugs and allow them to play better.

Also fix compile typo from the recent AltWeaponDamage PR

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -1504,6 +1504,7 @@ MedicalModeHealRateScalar[3]=0.25
 +Sitreps=SlightlyLargeMap
 +SitReps=LargeMap
 +SitReps=VeryLargeMap
++Sitreps=VeryWetMap
 +SitReps=ProjectMiranda      ; Makes all organic units lethargic
 +SitReps=SomethingInTheAir   ; Grants Combat Rush on any crit to all team XCOM and team Alien units
 +SitReps=ViperKing
@@ -1554,6 +1555,10 @@ bNegativeEffect=true
 bExcludeFromStrategy=true
 +PositiveEffects="IncreaseTimer2Effect_LW"
 +PositiveEffects="IncreaseTimer4Effect_LW"
+
+[VeryWetMap X2SitRepTemplate]
+bNegativeEffect=true
+bExcludeFromStrategy=true
 
 [DarkEventBarrierSitRep X2SitRepTemplate]
 bNegativeEffect=true
