--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -367,6 +367,10 @@ MAX_REBELS_FOR_RENDEZVOUS=5
 +VeryLargeMaps=plot_CTY_MdObj_Bridge_EMM_01
 +VeryLargeMaps=plot_CTY_MdObj_Trench_EMM_01
 
++VeryWetMaps=plot_WLD_AvDef_Flood_EMM_01
++VeryWetMaps=Plot_WLD_LgObj_Wetlands_EMM_01
++VeryWetMaps=plot_WLD_MdObj_Landing_EMM_01
+
 +ActivityRewardScalars=(ActivityName=Propaganda, RewardScalar=1.15)
 
 [LW_Overhaul.X2StrategyElement_LWMissionSources]
