Add images to the remaining new CovertActionNarratives

--- a/LongWarOfTheChosen/Config/XComGameBoard.ini
+++ b/LongWarOfTheChosen/Config/XComGameBoard.ini
@@ -917,6 +917,30 @@ ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Facility_Lead"
 AssociatedFaction="Faction_Templars"
 ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Facility_Lead"
 
+[CovertActionNarrative_FindBigDepot_Skirmishers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Skirmishers"
+ActionImage = "img:///UILibrary_StrategyImages.X2StrategyMap.POI_StolenGoods"
+
+[CovertActionNarrative_FindBigDepot_Reapers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Reapers"
+ActionImage = "img:///UILibrary_StrategyImages.X2StrategyMap.POI_StolenGoods"
+
+[CovertActionNarrative_FindBigDepot_Templars X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Templars"
+ActionImage = "img:///UILibrary_StrategyImages.X2StrategyMap.POI_StolenGoods"
+
+[CovertActionNarrative_EnemyCorpses_Skirmishers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Skirmishers"
+ActionImage = "img:///UILibrary_StrategyImages.X2StrategyMap.POI_MedicaObscura"
+
+[CovertActionNarrative_EnemyCorpses_Reapers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Reapers"
+ActionImage = "img:///UILibrary_StrategyImages.X2StrategyMap.POI_MedicaObscura"
+
+[CovertActionNarrative_EnemyCorpses_Templars X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Templars"
+ActionImage = "img:///UILibrary_StrategyImages.X2StrategyMap.POI_MedicaObscura"
+
 [CovertActionNarrative_RecruitRebels_Skirmishers X2CovertActionNarrativeTemplate]
 AssociatedFaction="Faction_Skirmishers"
 ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Increase_Supply_Income_by_X"
@@ -928,6 +952,19 @@ ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Increase_Supply_In
 [CovertActionNarrative_RecruitRebels_Templars X2CovertActionNarrativeTemplate]
 AssociatedFaction="Faction_Templars"
 ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Increase_Supply_Income_by_X"
+
+[CovertActionNarrative_ResistanceMec_Skirmishers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Skirmishers"
+ActionImage = "img:///UILibrary_StrategyImages.ScienceIcons.IC_AutopsyMEC"
+
+[CovertActionNarrative_ResistanceMec_Reapers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Reapers"
+ActionImage = "img:///UILibrary_StrategyImages.ScienceIcons.IC_AutopsyMEC"
+
+[CovertActionNarrative_ResistanceMec_Templars X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Templars"
+ActionImage = "img:///UILibrary_StrategyImages.ScienceIcons.IC_AutopsyMEC"
+
 
 [CovertActionNarrative_IntenseTraining_Skirmishers X2CovertActionNarrativeTemplate]
 AssociatedFaction="Faction_Skirmishers"
