Update Death From Above
1. Move handling to an event listener.
2. Use more complicated logic to validate the ability.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1484,7 +1484,7 @@ CONCUSSION_WARHEADS_ENV_DMG_BONUS=7
 DFA_USES_PER_TURN = 1
 
 ; Range penalty negation for DFA
-; 0.8 = 80% penalty negation
+; -0.8 = 80% penalty negation
 DFA_RANGE_PENALTY_NEGATION_MODIFIER = -0.5
 
 ; Attacks against targets at this range and farther
@@ -1493,6 +1493,8 @@ DFA_RANGE_PENALTY_NEGATION_BASE_RANGE = 17
 
 ; List of abilities that never activate DFA
 +DFA_BLACKLISTED_ABILITIES = "DoubleTap2"
+
+bLog = false
 
 [LW_Overhaul.X2Effect_CancelLongRangePenalty]
 
