Add Serial condition
1. Add an option to disable the effect while Serial is active.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1494,6 +1494,9 @@ DFA_RANGE_PENALTY_NEGATION_BASE_RANGE = 17
 ; List of abilities that never activate DFA
 +DFA_BLACKLISTED_ABILITIES = "DoubleTap2"
 
+; If `true`, the effects will be disabled while Serial is active
+DFA_DISABLE_WITH_SERIAL = false
+
 bLog = false
 
 [LW_Overhaul.X2Effect_CancelLongRangePenalty]
