--- a/LongWarOfTheChosen/Config/XComLW_OfficerPack.ini
+++ b/LongWarOfTheChosen/Config/XComLW_OfficerPack.ini
@@ -4,6 +4,11 @@ ALWAYSSHOW=false			;display all future abilities instead of displaying "locked"
 ALLOWTRAININGINARMORY=false	;allows training of abilities when UI accessed from Armory, not just fro0m OTS
 INSTANTTRAINING=false		;trains abilities instantly instead of creating officer training project
 
+[LW_OfficerPack_Integrated.XComGameState_HeadquartersProjectTrainLWOfficer]
+; Only soldier class or character abilities are taken into account when calculating the value
+; -0.5 = 50% time reduction
++PointsToTrainModifiers = (AbilityName = "QuickStudy", Modifier = -0.5)
+
 [LW_OfficerPack_Integrated.X2AbilityToHitCalc_LWCommandRange]
 COMMANDRANGEBUFFER = 3.0
 
