Add another map to LargeMaps sitrep checks

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -360,6 +360,7 @@ MAX_REBELS_FOR_RENDEZVOUS=5
 
 ; +LargeMaps=MapName
 +LargeMaps=Plot_CTY_Council_MdObj_Plaza
++LargeMaps=plot_CTY_SmObj_AdventSecurity_EMM
 
 ; +VeryLargeMaps=MapName2
 
