Allow disabling Long Watch changes
1. Add a config bool to disable changes to Long Watch.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1169,6 +1169,7 @@ KILLZONE_CONE_LENGTH=18
 KILLZONE_CONE_WIDTH=12
 
 BLUESCREEN_DISORIENT_CHANCE=50
+DISABLE_LONG_WATCH_CHANGES = false
 
 WORKSHOP_ENG_BONUS=5
 
