Remove some extra config whitespace

--- a/LongWarOfTheChosen/Config/XComGameCore.ini
+++ b/LongWarOfTheChosen/Config/XComGameCore.ini
@@ -774,7 +774,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[5]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseDrone",RollGroup=1), \\
 		Loots[6]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseViper",RollGroup=1), \\
 		Loots[7]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseSectoid",RollGroup=1), \\
-		\\
 		Loots[8]=(Chance=30,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=2), \\
 		Loots[9]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=2), \\
 		Loots[10]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=2), \\
@@ -783,7 +782,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[13]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseDrone",RollGroup=2), \\
 		Loots[14]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseViper",RollGroup=2), \\
 		Loots[15]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseSectoid",RollGroup=2), \\
-		\\
 		Loots[16]=(Chance=30,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=3), \\
 		Loots[17]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=3), \\
 		Loots[18]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=3), \\
@@ -792,7 +790,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[21]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseDrone",RollGroup=3), \\
 		Loots[22]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseViper",RollGroup=3), \\
 		Loots[23]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseSectoid",RollGroup=3), \\
-		\\
 		Loots[24]=(Chance=0,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=4), \\
 		Loots[25]=(Chance=25,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=4), \\
 		Loots[26]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=4), \\
@@ -801,7 +798,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[29]=(Chance=25,MinCount=1,MaxCount=1,TemplateName="CorpseDrone",RollGroup=4), \\
 		Loots[30]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseViper",RollGroup=4), \\
 		Loots[31]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseSectoid",RollGroup=4), \\
-		\\
 		Loots[32]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=5), \\
 		Loots[33]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=5), \\
 		Loots[34]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseDrone",RollGroup=5), \\
@@ -821,7 +817,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[10]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseFaceless",RollGroup=1), \\
 		Loots[11]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseChryssalid",RollGroup=1), \\
 		Loots[12]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventMEC",RollGroup=1), \\
-		\\
 		Loots[13]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=2), \\
 		Loots[14]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=2), \\
 		Loots[15]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=2), \\
@@ -835,7 +830,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[23]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseFaceless",RollGroup=2), \\
 		Loots[24]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseChryssalid",RollGroup=2), \\
 		Loots[25]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventMEC",RollGroup=2), \\
-		\\
 		Loots[26]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=3), \\
 		Loots[27]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=3), \\
 		Loots[28]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=3), \\
@@ -849,7 +843,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[36]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseFaceless",RollGroup=3), \\
 		Loots[37]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseChryssalid",RollGroup=3), \\
 		Loots[38]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventMEC",RollGroup=3), \\
-		\\
 		Loots[39]=(Chance=0,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=4), \\
 		Loots[40]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=4), \\
 		Loots[41]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=4), \\
@@ -863,7 +856,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[49]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseFaceless",RollGroup=4), \\
 		Loots[50]=(Chance=20,MinCount=1,MaxCount=1,TemplateName="CorpseChryssalid",RollGroup=4), \\
 		Loots[51]=(Chance=20,MinCount=1,MaxCount=1,TemplateName="CorpseAdventMEC",RollGroup=4), \\
-		\\
 		Loots[52]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseAdventShieldBearer",RollGroup=5), \\
 		Loots[53]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseFaceless",RollGroup=5), \\
 		Loots[54]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseChryssalid",RollGroup=5), \\
@@ -887,7 +879,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[14]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseMutonElite",RollGroup=1), \\
 		Loots[15]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSpectre",RollGroup=1), \\
 		Loots[16]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=1), \\
-		\\
 		Loots[17]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=2), \\
 		Loots[18]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=2), \\
 		Loots[19]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=2), \\
@@ -905,7 +896,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[31]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseMutonElite",RollGroup=2), \\
 		Loots[32]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSpectre",RollGroup=2), \\
 		Loots[33]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=2), \\
-		\\
 		Loots[34]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=3), \\
 		Loots[35]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=3), \\
 		Loots[36]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=3), \\
@@ -923,7 +913,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[48]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseMutonElite",RollGroup=3), \\
 		Loots[49]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSpectre",RollGroup=3), \\
 		Loots[50]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=3), \\
-		\\
 		Loots[51]=(Chance=0,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=4), \\
 		Loots[52]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=4), \\
 		Loots[53]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=4), \\
@@ -941,7 +930,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[65]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseMutonElite",RollGroup=4), \\
 		Loots[66]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseSpectre",RollGroup=4), \\
 		Loots[67]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=4), \\
-		\\
 		Loots[68]=(Chance=25,MinCount=1,MaxCount=1,TemplateName="CorpseArchon",RollGroup=5), \\
 		Loots[69]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseMutonElite",RollGroup=5), \\
 		Loots[70]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseSpectre",RollGroup=5), \\
@@ -968,7 +956,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[16]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=1), \\
 		Loots[17]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseGatekeeper",RollGroup=1), \\
 		Loots[18]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSectopod",RollGroup=1), \\
-		\\
 		Loots[19]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=2), \\
 		Loots[20]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=2), \\
 		Loots[21]=(Chance=2,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=2), \\
@@ -988,7 +975,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[35]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=2), \\
 		Loots[36]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseGatekeeper",RollGroup=2), \\
 		Loots[37]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSectopod",RollGroup=2), \\
-		\\
 		Loots[38]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=3), \\
 		Loots[39]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=3), \\
 		Loots[40]=(Chance=2,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=3), \\
@@ -1008,7 +994,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[54]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=3), \\
 		Loots[55]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseGatekeeper",RollGroup=3), \\
 		Loots[56]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSectopod",RollGroup=3), \\
-		\\
 		Loots[57]=(Chance=10,MinCount=1,MaxCount=1,TemplateName="CorpseAdventTrooper",RollGroup=4), \\
 		Loots[58]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAdventStunLancer",RollGroup=4), \\
 		Loots[59]=(Chance=2,MinCount=1,MaxCount=1,TemplateName="CorpseAdventPurifier",RollGroup=4), \\
@@ -1028,7 +1013,6 @@ NUM_STARTING_SOLDIERS=22
 		Loots[73]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseAndromedon",RollGroup=4), \\
 		Loots[74]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseGatekeeper",RollGroup=4), \\
 		Loots[75]=(Chance=5,MinCount=1,MaxCount=1,TemplateName="CorpseSectopod",RollGroup=4), \\
-		\\
 		Loots[76]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseGatekeeper",RollGroup=5), \\
 		Loots[77]=(Chance=15,MinCount=1,MaxCount=1,TemplateName="CorpseSectopod",RollGroup=5))
 
@@ -1042,11 +1026,14 @@ NUM_STARTING_SOLDIERS=22
 [XComGame.X2EnemyGroupTableManager]
 [XComGame.X2StatusEffects]
 BLEEDINGOUT_TURNS=4
-BLEEDOUT_BONUS_ROLL=50			; GTS Bonus
-BLEEDOUT_ROLL=100				; This is the size of the die
+; GTS Bonus
+BLEEDOUT_BONUS_ROLL=50
+; This is the size of the die		
+BLEEDOUT_ROLL=100
 
 ; This is overridden if USE_ALT_BLEEDOUT_RULES=true. ALT rules are set in LW_Overhaul.ini and don't use will
-BLEEDOUT_BASE=20				; Will - this value is Bleedoutchance
+; Will - this value is Bleedoutchance
+BLEEDOUT_BASE=20
 
 DISORIENTED_TURNS=2
 DISORIENTED_MOBILITY_ADJUST=-6
